--- a/DataAccess/DataAccess.csproj
+++ b/DataAccess/DataAccess.csproj
@@ -50,6 +50,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Employee1.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Employee.tt</DependentUpon>
+    </Compile>
     <Compile Include="EmployeeOperations.cs" />
     <Compile Include="Department.cs">
       <DependentUpon>Employee.tt</DependentUpon>
@@ -67,13 +72,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Employee.edmx</DependentUpon>
     </Compile>
-    <Compile Include="Employee1.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Employee.tt</DependentUpon>
-    </Compile>
     <Compile Include="EntityandDomainMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="spGetEmployees_Result.cs">
+      <DependentUpon>Employee.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EntityDeploy Include="Employee.edmx">
