--- a/EntityPractice/App.config
+++ b/EntityPractice/App.config
@@ -5,5 +5,6 @@
   </startup>
   <connectionStrings>
     <add name="EmployeeDBEntities" connectionString="metadata=res://*/Employee.csdl|res://*/Employee.ssdl|res://*/Employee.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=SampleDB;persist security info=True;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TestDbContext" connectionString="data source=(local);initial catalog=SampleDB;user id=sa;password=123;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
