Entity splitting code added

--- a/EntityPractice/App.config
+++ b/EntityPractice/App.config
@@ -5,6 +5,7 @@
   </startup>
   <connectionStrings>
     <add name="EmployeeDBEntities" connectionString="metadata=res://*/Employee.csdl|res://*/Employee.ssdl|res://*/Employee.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=SampleDB;persist security info=True;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SampleDB1Entities" connectionString="metadata=res://*/EntitySplitting.csdl|res://*/EntitySplitting.ssdl|res://*/EntitySplitting.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SampleDB1;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="TestDbContext" connectionString="data source=(local);initial catalog=SampleDB;user id=sa;password=123;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
